--- a/index.html
+++ b/index.html
@@ -8,21 +8,7 @@
 <body>
 <div class="game">
     <div class="scores">Scores:&nbsp;<span>0</span></div>
-    <div class="screen">
-        <!-- Demo tiles -->
-        <div class="auto" style="background-image: url(./2-auto.png); top: 0; left: 0;"></div>
-        <div class="auto" style="background-image: url(./2-auto.png); top: 0; left: 100px;"></div>
-        <div class="auto" style="background-image: url(./2-auto.png); top: 0; left: 200px;"></div>
-        <div class="auto" style="background-image: url(./1-pilot.png); top: 450px;left: 0;"></div>
-        <div class="auto" style="background-image: url(./1-pilot.png); top: 450px;left: 100px;"></div>
-        <div class="auto" style="background-image: url(./1-pilot.png); top: 450px;left: 200px;"></div>
-        <div class="line" style="top: 0;"></div>
-        <div class="line" style="top: 120px;"></div>
-        <div class="line" style="top: 240px;"></div>
-        <div class="line" style="top: 360px;"></div>
-        <div class="line" style="top: 480px;"></div>
-        <!-- Demo tiles -->
-    </div>
+    <div class="screen"></div>
     <div class="buttons">
         <div id="start" class="btn" title="Or press key S">
             START
